--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ aiofiles==25.1.0
 python-dotenv==1.1.0
 mcp==1.26.0
 mcp-agent==0.2.6
-redis[hiredis]==5.2.1
+redis==5.2.1
 google-genai==1.3.0
 openai==1.63.2
