--- a/mcp_agent.config.yaml
+++ b/mcp_agent.config.yaml
@@ -16,3 +16,8 @@ mcp:
       command: python
       args:
         - mcp_server.py
+    travel_intel:
+      transport: stdio
+      command: python
+      args:
+        - mcp_travel_server.py
